Fix header text-align

--- a/static/style.css
+++ b/static/style.css
@@ -96,6 +96,7 @@ h2, blockquote {
 
 h2 {
 	font-size: 60px;
+	text-align: center;
 }
 
 blockquote {
